--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,4 +6,68 @@ const pageTitle = "Krishnanand Yadav";
 
 <BaseLayout pageTitle={pageTitle}>
   <h1 class="text-4xl font-bold">{pageTitle}</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit numquam
+    ex facere nihil soluta facilis praesentium quia sit placeat, a doloremque,
+    porro quam veniam iure omnis aperiam ea vero debitis! Porro ad corrupti
+    necessitatibus totam. Quae dolorem pariatur voluptatum animi ipsam odit
+    ullam nam possimus maiores esse vitae in autem repudiandae nostrum officia
+    reprehenderit exercitationem, et odio, quos ad tenetur quod vel eius culpa!
+    Animi labore beatae provident, tempora ut quae numquam eum sit amet ullam
+    quam explicabo voluptates sunt possimus blanditiis fugit perferendis. Libero
+    minima, doloremque dolores ad veniam laboriosam culpa consequuntur magni
+    officia. Repudiandae dolorum atque animi, commodi a sit provident vel
+    obcaecati molestias, consectetur fugit inventore minus libero et. Aliquid
+    placeat repellendus sit vero harum. Quae, nesciunt? Quibusdam error
+    reprehenderit, tempora ut totam blanditiis perspiciatis vel quisquam maxime
+    fuga temporibus aut voluptatem, facere voluptatibus officia. Vero quos harum
+    cumque! Nam quis cum laboriosam similique, mollitia libero eius velit est
+    cumque? Error libero dolorum dolores voluptate quam eum perferendis debitis
+    temporibus deleniti saepe ab optio, possimus molestiae iste enim atque
+    consequatur autem officia? Ratione assumenda optio consectetur, laboriosam
+    quae nobis pariatur dolorem eum amet ducimus exercitationem maxime
+    architecto facere aliquid sint dicta atque excepturi natus? Cupiditate quasi
+    recusandae quidem sint nam ut, odit, at consequatur similique fugit iure
+    nisi? Aspernatur ipsam nemo veniam, in quo temporibus laudantium nisi
+    consectetur soluta autem dolores quasi magni tempore ipsa dolor neque quis
+    qui cum. Accusamus iste excepturi quos commodi, nostrum dolorem accusantium
+    repudiandae minima totam in omnis deleniti? Minima magnam aut similique vel
+    rem ipsa possimus quasi blanditiis aliquam repellat mollitia sit odit
+    dignissimos tempora, sunt architecto excepturi fuga ratione commodi eos,
+    dolorum asperiores fugit. Animi eum perspiciatis architecto tempore a
+    accusamus itaque obcaecati ipsam blanditiis, odio dignissimos nam ullam
+    fugit accusantium nisi officia quidem quia iusto quos ex vero soluta! Atque
+    molestiae mollitia perspiciatis sint? Facere illo ipsam, fugiat alias unde
+    rem autem, laudantium ut corporis eos asperiores quaerat accusantium ipsa
+    quod placeat quis, fuga repellat. Repellat iusto distinctio atque
+    voluptatibus nesciunt voluptas molestiae explicabo itaque mollitia, facilis,
+    quisquam, officiis fugiat quae. Repudiandae reiciendis tenetur ipsa quia sed
+    consequuntur optio, corrupti laborum error reprehenderit quaerat ab
+    molestiae neque vitae corporis excepturi nihil itaque molestias amet modi.
+    Esse vero repellendus deleniti pariatur unde harum quisquam ea nisi tenetur
+    amet? Nostrum, obcaecati porro saepe officiis necessitatibus exercitationem,
+    assumenda unde magnam, reprehenderit accusantium quis. Perferendis nulla,
+    ea, molestias, animi porro accusamus libero quod iure voluptatem modi
+    cupiditate. Veritatis obcaecati debitis nemo dolor? Ut laboriosam saepe
+    assumenda ullam deleniti dignissimos, praesentium, ipsum soluta sequi
+    tempore, voluptatum eum. Numquam, assumenda. In aut minus ab sit vero quos
+    tempora quod maiores repellat nisi? Cumque voluptatem soluta similique est
+    sunt quaerat nulla odit sed id, voluptates ratione accusantium corrupti
+    accusamus dolorem molestiae libero! Velit, provident mollitia quisquam
+    aspernatur, magnam commodi fuga tempore nobis iusto ipsa, culpa recusandae
+    quas pariatur optio doloremque in temporibus a quasi inventore ut atque
+    laboriosam non. Alias quidem adipisci nam repudiandae harum aliquam! Atque
+    cupiditate incidunt impedit autem dolores, ipsum dolore rem eaque voluptate
+    fugit ipsam perferendis totam. Aperiam, pariatur reiciendis ipsa quidem,
+    soluta dolore qui corporis, ab iusto consequatur optio at. Quia eos
+    doloremque deserunt consequuntur! Sint, ut. Voluptatibus, iure voluptatum
+    dignissimos harum officia tempora illo placeat tenetur aliquam quos
+    architecto amet dicta officiis, debitis pariatur laboriosam, culpa quae
+    accusantium? Tempora neque illum explicabo ea veniam. Neque hic odit
+    veritatis autem, blanditiis iste possimus doloribus? Quaerat fuga totam
+    possimus doloremque, porro tempore suscipit. Consequuntur iusto, voluptate
+    voluptates sint vitae atque accusantium inventore. Laboriosam tempora minima
+    harum reprehenderit officiis saepe? Deserunt at quos, repudiandae, nulla
+    dolorem eveniet eius, sunt quam numquam voluptates fugiat.
+  </p>
 </BaseLayout>
