--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import "@fontsource-variable/josefin-sans";
 import { ViewTransitions } from "astro:transitions";
 import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
 
 const { pageTitle } = Astro.props;
 ---
@@ -20,11 +21,15 @@ const { pageTitle } = Astro.props;
     </style>
     <ViewTransitions />
   </head>
-  <body class="min-h-screen bg-amber-50 py-8 px-8 lg:px-40">
+  <body
+    class="min-h-screen bg-amber-50 py-2 lg:py-8 px-4 lg:px-40 flex flex-col"
+  >
     <Navbar />
 
-    <main class="px-4">
+    <main class="px-2 lg:px-4 flex-1">
       <slot />
     </main>
+
+    <Footer />
   </body>
 </html>
