--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,19 +3,19 @@ import { Icon } from "astro-icon/components";
 ---
 
 <footer
-  class="bg-black/80 text-white text-xs lg:text-base p-3 lg:p-6 my-4 rounded-lg text-center"
+  class="bg-black/80 text-white text-xs lg:text-base p-3 lg:p-6 mt-4 rounded-lg text-center"
 >
-  <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-y-4">
+  <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-y-4 gap-x-24">
     <div>
       <a
         href="https://github.com/Krishnanand2517"
         target="_blank"
-        class="flex justify-center items-center"
+        class="flex justify-center items-center group"
       >
         <Icon
           name="mdi:github"
           size={24}
-          class="hover:text-amber-200 active:text-amber-200 transition-colors"
+          class="group-hover:text-amber-200 group-active:text-amber-200 transition-colors"
         />
       </a>
     </div>
@@ -24,12 +24,12 @@ import { Icon } from "astro-icon/components";
       <a
         href="https://www.linkedin.com/in/krishnanandyadav"
         target="_blank"
-        class="flex justify-center items-center"
+        class="flex justify-center items-center group"
       >
         <Icon
           name="mdi:linkedin"
           size={24}
-          class="hover:text-amber-200 active:text-amber-200 transition-colors"
+          class="group-hover:text-amber-200 group-active:text-amber-200 transition-colors"
         />
       </a>
     </div>
@@ -38,12 +38,12 @@ import { Icon } from "astro-icon/components";
       <a
         href="https://krishnanand.hashnode.dev"
         target="_blank"
-        class="flex justify-center items-center"
+        class="flex justify-center items-center group"
       >
         <Icon
           name="simple-icons:hashnode"
           size={24}
-          class="hover:text-amber-200 active:text-amber-200 transition-colors"
+          class="group-hover:text-amber-200 group-active:text-amber-200 transition-colors"
         />
       </a>
     </div>
@@ -52,12 +52,12 @@ import { Icon } from "astro-icon/components";
       <a
         href="https://krishnanand.itch.io"
         target="_blank"
-        class="flex justify-center items-center"
+        class="flex justify-center items-center group"
       >
         <Icon
           name="cib:itch-io"
           size={24}
-          class="hover:text-amber-200 active:text-amber-200 transition-colors"
+          class="group-hover:text-amber-200 group-active:text-amber-200 transition-colors"
         />
       </a>
     </div>
@@ -66,12 +66,12 @@ import { Icon } from "astro-icon/components";
       <a
         href="mailto:krishnanand2517@gmail.com"
         target="_blank"
-        class="flex justify-center items-center"
+        class="flex justify-center items-center group"
       >
         <Icon
           name="mdi:email"
           size={24}
-          class="hover:text-amber-200 active:text-amber-200 transition-colors"
+          class="group-hover:text-amber-200 group-active:text-amber-200 transition-colors"
         />
       </a>
     </div>
