--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const { pageTitle } = Astro.props;
   >
     <Navbar />
 
-    <main class="px-2 lg:px-4 flex-1">
+    <main class="px-2 lg:px-4 flex flex-1 flex-col justify-center items-center">
       <slot />
     </main>
 
