--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Hero from "../components/Hero";
 
 const pageTitle = "Krishnanand Yadav";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h1 class="text-4xl font-bold">{pageTitle}</h1>
+  <Hero client:load />
 </BaseLayout>
