Update minor spacing issues for larger screens

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <footer
-  class="bg-black/80 text-white text-xs lg:text-base p-3 lg:p-6 mt-4 rounded-lg text-center"
+  class="lg:mx-auto bg-black/80 text-white text-xs lg:text-base p-3 lg:p-6 mt-4 rounded-lg text-center"
 >
   <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-y-4 gap-x-24">
     <div>
