Add resume link, change highlight color to black

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -49,6 +49,13 @@ import { Astronav, MenuItems, MenuIcon, StickyHeader } from "astro-navbar";
             >Contact</a
           >
         </li>
+        <li>
+          <a
+            href="https://drive.google.com/file/d/1xEj5mHcEib2wTuwx2pE5tc32TJy-zPLF/view"
+            class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
+            target="_blank">Resume</a
+          >
+        </li>
       </ul>
     </MenuItems>
   </Astronav>
