--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,7 +22,7 @@ const { pageTitle } = Astro.props;
     <ViewTransitions />
   </head>
   <body
-    class="min-h-screen bg-amber-50 py-2 lg:py-8 px-4 lg:px-40 xl:px-56 2xl:px-72 flex flex-col"
+    class="min-h-screen bg-amber-50 py-2 lg:py-8 px-4 lg:px-40 xl:px-56 2xl:px-72 flex flex-col selection:bg-black/90 selection:text-white"
   >
     <Navbar />
 
