Add skills - webrtc, docker, redis, kafka, socketio, Add project - WeTalk

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,6 +38,8 @@ const pageTitle = "About Me | Krishnanand Yadav";
           <Icon name="skill-icons:astro" size={32} />
           <Icon name="skill-icons:tailwindcss-dark" size={32} />
           <Icon name="skill-icons:materialui-dark" size={32} />
+          <Icon name="simple-icons:webrtc" size={32} />
+          <Icon name="simple-icons:socketdotio" size={32} />
         </div>
       </div>
 
@@ -47,6 +49,10 @@ const pageTitle = "About Me | Krishnanand Yadav";
           <Icon name="skill-icons:nodejs-dark" size={32} />
           <Icon name="skill-icons:expressjs-dark" size={32} />
           <Icon name="skill-icons:graphql-dark" size={32} />
+          <Icon name="skill-icons:redis-dark" size={32} />
+          <Icon name="skill-icons:kafka" size={32} />
+          <Icon name="simple-icons:webrtc" size={32} />
+          <Icon name="simple-icons:socketdotio" size={32} />
         </div>
       </div>
 
@@ -76,6 +82,7 @@ const pageTitle = "About Me | Krishnanand Yadav";
         </h3>
         <div class="lg:ml-[4.6rem] flex flex-wrap items-center gap-6">
           <Icon name="skill-icons:git" size={32} />
+          <Icon name="skill-icons:docker" size={32} />
           <Icon name="skill-icons:vercel-dark" size={32} />
           <Icon name="skill-icons:jest" size={32} />
           <Icon name="skill-icons:postman" size={32} />
