--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@ import { Astronav, MenuItems, MenuIcon, StickyHeader } from "astro-navbar";
 ---
 
 <StickyHeader
-  class="sticky top-2 border-b z-20 lg:flex p-2 lg:p-4 gap-5 transition-all"
+  class="border-b z-20 lg:flex p-2 lg:p-4 gap-5 transition-all"
   scrollY={50}
   defaultClass="py-3 lg:py-5 border-transparent text-gray-600"
   activeClass="py-2 bg-black/40 text-white border-gray-200 backdrop-blur-sm rounded-md"
@@ -23,14 +23,7 @@ import { Astronav, MenuItems, MenuIcon, StickyHeader } from "astro-navbar";
       <ul class="flex flex-col lg:flex-row lg:items-center lg:gap-5">
         <li>
           <a
-            href="/"
-            class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
-            >Home</a
-          >
-        </li>
-        <li>
-          <a
-            href="/about"
+            href="#about"
             class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
             >About</a
           >
