Add all sections to the home page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,21 +30,21 @@ import { Astronav, MenuItems, MenuIcon, StickyHeader } from "astro-navbar";
         </li>
         <li>
           <a
-            href="/projects"
+            href="#projects"
             class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
             >Projects</a
           >
         </li>
         <li>
           <a
-            href="/contact"
+            href="#contact"
             class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
             >Contact</a
           >
         </li>
         <li>
           <a
-            href="https://drive.google.com/file/d/1KP572LKa70L7UCorhwxryun-p0-GkrW8/view"
+            href="https://drive.google.com/file/d/1uaPWgGkJ2Ldw0acbbW-g443zTy_X0Fq5/view?usp=sharing"
             class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
             target="_blank">Resume</a
           >
