--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -43,8 +43,8 @@ import { Icon } from "astro-icon/components";
         <Icon name="skill-icons:nodejs-dark" size={32} />
         <Icon name="skill-icons:expressjs-dark" size={32} />
         <Icon name="skill-icons:graphql-dark" size={32} />
-        <Icon name="skill-icons:redis-dark" size={32} />
-        <Icon name="skill-icons:kafka" size={32} />
+        <!-- <Icon name="skill-icons:redis-dark" size={32} />
+        <Icon name="skill-icons:kafka" size={32} /> -->
         <Icon name="simple-icons:webrtc" size={32} />
         <Icon name="simple-icons:socketdotio" size={32} />
       </div>
@@ -56,8 +56,9 @@ import { Icon } from "astro-icon/components";
       </h3>
       <div class="lg:ml-6 flex flex-wrap items-center gap-6">
         <Icon name="skill-icons:mongodb" size={32} />
-        <Icon name="skill-icons:supabase-dark" size={32} />
         <Icon name="skill-icons:mysql-dark" size={32} />
+        <Icon name="skill-icons:postgresql-dark" size={32} />
+        <Icon name="skill-icons:supabase-dark" size={32} />
       </div>
     </div>
 
