--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Hero from "../components/Hero";
 import About from "../components/About.astro";
+import Projects from "./projects.astro";
+import Contact from "./contact.astro";
 
 const pageTitle = "Krishnanand Yadav";
 ---
@@ -13,5 +15,13 @@ const pageTitle = "Krishnanand Yadav";
 
   <section id="about" class="min-h-screen">
     <About />
+  </section>
+
+  <section id="projects" class="min-h-screen">
+    <Projects />
+  </section>
+
+  <section id="contact" class="">
+    <Contact />
   </section>
 </BaseLayout>
