--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,11 +29,8 @@ const { pageTitle } = Astro.props;
         position: relative;
         z-index: 1;
         background-color: #fffaf0;
-        background-image: radial-gradient(
-            ellipse at center,
-            transparent 15%,
-            #fffbeb 85%
-          ),
+        background-image:
+          radial-gradient(ellipse at center, transparent 15%, #fffbeb 85%),
           repeating-linear-gradient(
             0deg,
             rgba(0, 0, 0, 0.04) 0 1px,
@@ -88,9 +85,11 @@ const { pageTitle } = Astro.props;
     <Analytics />
   </head>
   <body
-    class="min-h-screen py-2 lg:py-8 px-4 lg:px-40 xl:px-56 2xl:px-72 flex flex-col selection:bg-black/90 selection:text-white"
+    class="min-h-screen py-2 lg:py-8 px-4 lg:px-40 xl:px-80 2xl:px-[540px] flex flex-col selection:bg-black/90 selection:text-white"
   >
-    <div class="fixed top-2 left-0 right-0 px-4 lg:px-40 xl:px-56 2xl:px-72">
+    <div
+      class="fixed top-2 left-0 right-0 px-4 lg:px-40 xl:px-80 2xl:px-[540px]"
+    >
       <Navbar />
     </div>
 
