Set a 2.5-D plus-pointer as the cursor

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -85,7 +85,7 @@ const { pageTitle } = Astro.props;
     <Analytics />
   </head>
   <body
-    class="min-h-screen py-2 lg:py-8 px-4 lg:px-40 xl:px-80 2xl:px-[540px] flex flex-col selection:bg-black/90 selection:text-white"
+    class="min-h-screen py-2 lg:py-8 px-4 lg:px-40 xl:px-80 2xl:px-[540px] flex flex-col selection:bg-black/90 selection:text-white cursor-cell"
   >
     <div
       class="fixed top-2 left-0 right-0 px-4 lg:px-40 xl:px-80 2xl:px-[540px]"
