--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <footer
-  class="lg:mx-auto bg-black/80 text-white text-xs lg:text-base p-3 lg:p-6 mt-4 rounded-lg text-center hover:scale-x-105 duration-500 transition-all"
+  class="lg:mx-auto bg-black/80 text-white text-xs lg:text-base p-3 lg:p-6 mt-4 rounded-lg text-center hover:scale-105 duration-500 ease-out transition-all"
 >
   <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-y-4 gap-x-24">
     <div>
@@ -78,7 +78,7 @@ import { Icon } from "astro-icon/components";
   </div>
 
   <p class="mt-4 text-white/60">
-    <span class="hover:text-amber-200 duration-500 transition-colors"
+    <span class="hover:text-amber-200 duration-500 ease-out transition-colors"
       >Made with ❤️ by Krishnanand Yadav</span
     >
   </p>
