feat: Add experience section, some design updates

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,19 +13,26 @@ import { Astronav, MenuItems, MenuIcon, StickyHeader } from "astro-navbar";
       <a
         href="/"
         class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
-        >Krishnanand Yadav</a
+        >Home</a
       >
       <div class="flex items-center lg:hidden">
         <MenuIcon class="w-4 h-4 text-gray-800" />
       </div>
     </div>
     <MenuItems class="hidden lg:flex">
-      <ul class="flex flex-col lg:flex-row lg:items-center lg:gap-5">
+      <ul class="flex flex-col lg:flex-row lg:items-center lg:gap-4">
         <li>
           <a
             href="#about"
             class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
             >About</a
+          >
+        </li>
+        <li>
+          <a
+            href="#experience"
+            class="p-2 hover:bg-black/10 rounded-md transition-colors duration-300"
+            >Experience</a
           >
         </li>
         <li>
