--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -5,7 +5,7 @@ const { project } = Astro.props;
 ---
 
 <div
-  class={`px-2 py-4 lg:p-6 ${project.bgColor} hover:shadow-2xl border border-black/60 rounded-md group transition-all duration-700`}
+  class={`px-2 py-4 lg:p-6 ${project.bgColor} hover:shadow-2xl border border-dashed border-zinc-700 rounded-lg group transition-all duration-700`}
 >
   <h1 class="text-xl lg:text-2xl text-center">{project.name}</h1>
 
